; ModuleID = '/home/carl/AnghaBench/darknet/src/extr_convolutional_layer.c_visualize_convolutional_layer.c'
source_filename = "/home/carl/AnghaBench/darknet/src/extr_convolutional_layer.c_visualize_convolutional_layer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }

@.str = private unnamed_addr constant [11 x i8] c"%s: Output\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @visualize_convolutional_layer(i32 %0, i8* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_5__, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca [256 x i8], align 16
  %11 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  store i32 %0, i32* %11, align 4
  store i8* %1, i8** %5, align 8
  store i32* %2, i32** %6, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32* @get_weights(i32 %13)
  store i32* %14, i32** %7, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = load i8*, i8** %5, align 8
  %19 = call i32 @show_images(i32* %15, i32 %17, i8* %18)
  %20 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %4, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @get_convolutional_image(i32 %21)
  store i32 %22, i32* %8, align 4
  %23 = load i32, i32* %8, align 4
  %24 = call i32 @collapse_image_layers(i32 %23, i32 1)
  store i32 %24, i32* %9, align 4
  %25 = getelementptr inbounds [256 x i8], [256 x i8]* %10, i64 0, i64 0
  %26 = load i8*, i8** %5, align 8
  %27 = call i32 @sprintf(i8* %25, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str, i64 0, i64 0), i8* %26)
  %28 = load i32, i32* %9, align 4
  %29 = call i32 @free_image(i32 %28)
  %30 = load i32*, i32** %7, align 8
  ret i32* %30
}

declare dso_local i32* @get_weights(i32) #1

declare dso_local i32 @show_images(i32*, i32, i8*) #1

declare dso_local i32 @get_convolutional_image(i32) #1

declare dso_local i32 @collapse_image_layers(i32, i32) #1

declare dso_local i32 @sprintf(i8*, i8*, i8*) #1

declare dso_local i32 @free_image(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
